# E-Commerce

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_SNAPSHOT.md  README.md  completed_TODOS.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev.db  manage.cmd  manage.ps1  manage.py  pyproject.toml  smoke.db
backend/alembic/: env.py
backend/alembic/versions/: 076e65412392_add_username_to_users.py  2f4b9a7c1d3e_add_delivery_tables.py  7ac07906b8d1_second_migration.py  d4a3f3ae0ee0_alter_telegram_id_to_bigint.py  ff45da466cbb_initial_schema.py
backend/scripts/: seed.py
backend/src/: __init__.py  config.py  main.py  models_registry.py
backend/src/admin/: router.py  schemas.py  service.py  sqladmin_setup.py
backend/src/core/: __init__.py  base_repository.py  database.py  dependencies.py  enums.py  exceptions.py  middleware.py  pagination.py  rate_limit.py  redis.py  schemas.py  security.py  startup.py  storage.py  utils.py
backend/src/modules/: __init__.py
backend/src/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/modules/cart/: router.py  schemas.py  service.py
backend/src/modules/catalog/: filters.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/delivery/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/inventory/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/modules/notifications/: models.py  repository.py  router.py  schemas.py  service.py  templates.py
backend/src/modules/notifications/channels/: __init__.py  base.py  email.py  sms.py  telegram.py
backend/src/modules/orders/: models.py  repository.py  router.py  schemas.py  service.py  state_machine.py
backend/src/modules/payments/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/payments/providers/: __init__.py  base.py  click.py  payme.py  stripe.py
backend/src/modules/reviews/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/shipping/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/shipping/providers/: __init__.py  base.py  local.py
backend/src/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/vendors/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/tasks/: celery_app.py  notification_tasks.py  order_tasks.py  report_tasks.py
backend/tests/: conftest.py  factories.py  test_utils.py
backend/tests/modules/: test_auth.py  test_cart.py  test_catalog.py  test_delivery.py  test_orders.py  test_reviews.py  test_users.py  test_vendors.py
bot/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  config.py  main.py  pyproject.toml  texts.py
bot/handlers/: __init__.py  cart.py  catalog.py  checkout.py  orders.py  start.py  support.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/middlewares/: __init__.py  auth.py  throttling.py
bot/services/: __init__.py  api_client.py
bot/states/: __init__.py  checkout.py
frontend/: .dockerignore  .npmrc  Dockerfile  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml
graphify-out/: .graphify_ast.json  (+11 more)
(+109 files in other folders)
