[project]
name = "ecommerce-backend"
version = "0.1.0"
description = "Universal e-commerce platform backend (FastAPI, SQLAlchemy async)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Settings / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    # Auth / security
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    # Cache / sessions
    "redis>=5.0.0",
    # Async tasks
    "celery>=5.4.0",
    # HTTP client
    "httpx>=0.27.0",
    # Storage
    "minio>=7.2.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Observability
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.5.0",
    "structlog>=24.2.0",
    # Search (optional)
    "elasticsearch[async]>=8.13.0",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
    "fakeredis>=2.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "S",   # flake8-bandit (security)
]
ignore = [
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
    "S101",  # assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S107"]
"alembic/**/*.py" = ["E501"]
# manage.py is a dev task runner: it deliberately shells out to uv/ruff/etc.
"manage.py" = ["S603", "S605", "S607"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/tasks/*", "alembic/*"]
