[project]
name = "ecommerce-bot"
version = "0.1.0"
description = "Telegram storefront bot (Aiogram3) — talks to the backend over REST"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

# The bot is run as a module (``python -m bot.main``) from the repository root,
# not installed as a wheel — tell uv to manage the environment only.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ASYNC"]
